--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     stages {
-        stage (build dokerfile) {
+        stage ('Build dockerfile') {
             steps{
                 sh "ls"
             }
