--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,15 @@ pipeline {
     stages {
         stage ('Build dockerfile') {
             steps{
-                sh "ls"
-                sh "echo shalom"
+                sh "doker build -t "
             }
+        } 
+        stage ('test dokerfile') {
+            steps {
+                sh "docker build -t myflaskapp ."
+
+            }
+
         }
 
     }
