creat build docker

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,10 +3,10 @@ pipeline {
     stages {
         stage ('Build dockerfile') {
             steps{
-                sh "doker build -t "
+                sh "docker build -t "
             }
         } 
-        stage ('test dokerfile') {
+        stage ('test dockerfile') {
             steps {
                 sh "docker build -t myflaskapp ."
 
