--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,12 @@ pipeline {
     stages {
         stage ('Build dockerfile') {
             steps{
-                sh "docker build -t "
+                sh "docker build -t pipeline2"
             }
         } 
         stage ('test dockerfile') {
             steps {
-                sh "docker build -t myflaskapp ."
+                sh "docker push pipeline2 ."
 
             }
 
