--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,12 @@ pipeline {
         } 
         stage ('push dockerfile') {
             steps {
-                sh "echo $dockerhub | docker login -u yigalisaac --password-stdin"
+                withCredentials([string(credentialsId: 'dockerhub-password', variable: 'DOCKERHUB_PASS')]) {
+                sh '''
+                    echo "$DOCKERHUB_PASS" | docker login -u yigalisaac --password-stdin
+                '''
+            }
+
                 sh "docker push pipeline2:latest ."
 
             }
