--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
         stage ("push dockerfile") {
             steps{
                 sh "echo $dockerhub | docker login -u yigalisaac --password-stdin"
+                sh "echo --password-"
                 sh "docker push pipeline2"
             }
         }
