--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage ("push dockerfile") {
             steps{
-                sh "echo $dockerhub | docker login -u yigalisaac--password-stdin"
+                sh "echo $dockerhub | docker login -u yigalisaac --password-stdin"
                 sh "echo --password-"
                 sh "docker push pipeline2"
             }
