--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         stage ("push dockerfile") {
             steps{
                 sh "echo $dockerhub | docker login -u yigalisaac --password-stdin"
-                sh "docker push pipeline2"
+                sh "docker push yigalisaac/pipeline2"
             }
         }
     }
